--- a/main.css
+++ b/main.css
@@ -1,16 +1,18 @@
-html,body {
+html,
+body {
 	margin: 0;
 	padding: 0;
 	position: relative;
-	font-family:"Arial";
-	width:100%;
-    background-color: #000;
+	font-family: "Arial";
+	width: 100%;
+	background-color: #000;
+	overflow: hidden;
 }
 
 
-#webgl{
-    background-color:transparent;
-    background:transparent;
+#webgl {
+	background-color: transparent;
+	background: transparent;
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -19,20 +21,20 @@ html,body {
 }
 
 #game {
-    
-    background-color:transparent;
-    background:transparent;
+
+	background-color: transparent;
+	background: transparent;
 	position: absolute;
 	left: 0;
 	top: 0;
 }
 
-#ajaxbar{
-	background:url('media/graphics/loading/ajax-loader.gif') center no-repeat;
+#ajaxbar {
+	background: url('media/graphics/loading/ajax-loader.gif') center no-repeat;
 }
 
 #canvas {
-    background-color:transparent;
+	background-color: transparent;
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -42,15 +44,16 @@ html,body {
 	-ms-interpolation-mode: nearest-neighbor;
 	/*image-rendering:-webkit-optimize-contrast;*/
 	-webkit-transform: scale3d(1, 1, 1);
-    
-    /*only enable for IE*/
-    filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='sample_600x600.png', sizingMethod='scale');
-    background:none !important;
+	transform: scale3d(1, 1, 1);
+
+	/*only enable for IE*/
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='sample_600x600.png', sizingMethod='scale');
+	background: none !important;
 }
 
 #webglcanvas {
-    background-color:transparent;
-	
+	background-color: transparent;
+
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -60,25 +63,27 @@ html,body {
 	-ms-interpolation-mode: nearest-neighbor;
 	/*image-rendering:-webkit-optimize-contrast;*/
 	-webkit-transform: scale3d(1, 1, 1);
+	transform: scale3d(1, 1, 1);
 }
 
 #orientate {
 	position: absolute;
-	float:left;
-	width:100%;
-	height:100%;
+	float: left;
+	width: 100%;
+	height: 100%;
 	top: 0;
 	left: 0;
 	z-index: 10002;
-	display:none;
+	display: none;
 }
 
 #orientate img {
-	position:absolute;
-	float:left;
-	width:100%;
-	height:100%;
+	position: absolute;
+	float: left;
+	width: 100%;
+	height: 100%;
 }
+
 /* Deprecated
 #scrollDown{
 	border-style: none;
@@ -91,25 +96,25 @@ html,body {
 }
 */
 .play {
-	position:absolute;
-	float:left;
-	width:100%;
-	height:100%;
-	z-index:1000;
-	background-color:#fff;
-	left:0;
-	top:0;
-	display:none;
+	position: absolute;
+	float: left;
+	width: 100%;
+	height: 100%;
+	z-index: 1000;
+	background-color: #fff;
+	left: 0;
+	top: 0;
+	display: none;
 }
 
 .play img {
-	position:absolute;
-	float:left;
-	width:100%;
-	height:100%;
-	z-index:1000;
-	left:0;
-	top:0;
+	position: absolute;
+	float: left;
+	width: 100%;
+	height: 100%;
+	z-index: 1000;
+	left: 0;
+	top: 0;
 }
 
 #nohtml5 {
@@ -120,7 +125,7 @@ html,body {
 	height: 100%;
 	background-color: #000;
 	z-index: 1002;
-	visibility:hidden;
+	visibility: hidden;
 }
 
 #nohtml5 img {
@@ -129,15 +134,15 @@ html,body {
 	height: 100%;
 }
 
-#nohtml5-bubble{
+#nohtml5-bubble {
 	position: absolute;
 	bottom: 20px;
 	left: 50px;
 	width: 380px;
 	height: 100px;
 	z-index: 1002;
-	color:#000;
-	background:rgba(255,255,255,0.75);
+	color: #000;
+	background: rgba(255, 255, 255, 0.75);
 
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
@@ -145,11 +150,11 @@ html,body {
 	/*border:2px solid #969696;*/
 }
 
-#nohtml5-text{
-	padding:10px;
+#nohtml5-text {
+	padding: 10px;
 }
 
-.horizontal-seperator{
-	height:10px;
-	width:100%;
+.horizontal-seperator {
+	height: 10px;
+	width: 100%;
 }
